
Slick 8.x-1.0-dev, 2016-09-05
-----------------------------
- #2793477 by daniel.bosen: Hook requirements returns error when libraries
  module is used.
- #2792319 by audriusb: Undefined index: caption.
- Refined form elements, and a few cleanups.

Slick 8.x-1.0-dev, 2016-08-30
-----------------------------
- Removed non-contextual descriptions.
- Fixed for SlickFormatter::getThumbnail().
- Fixed for CHANGELOG.txt versions.

Slick 8.x-1.0-dev, 2016-08-29
-----------------------------
- Removed useless t() from skin names.
- Changed Cache default value to No caching.
- A few cleanups.

Slick 8.x-1.0-dev, 2016-08-23
-----------------------------
- #2783111 by slashrsm: Slick's CSS is affecting all iFrames not just the ones
  that appear in the Slick carousel.
- #2785317 by patilvishalvs: Make breakpoints field fault proof.
  Changed breakpoints field back from number to textfield like D7.

Slick 8.x-1.0-dev, 2016-08-03
-----------------------------
- #2768457 by chr.fritsch: Add libraries support.
- #2769073 by audriusb: Allow adding additional cache tags.
- Fixed for trivial typos $defines_skins to $defined_skins.

Slick 8.x-1.0-dev, 2016-07-14
-----------------------------
- Removed useles delay for an unslick since slick already kicks in.
- #2765353 by Vinay15: Remove @file tag docblock from all the .php files.

Slick 8.x-1.0-dev, 2016-06-19
-----------------------------
- Moved thumbnails outside the loop.
- Allowed Slick to run at least the lazyload on an unslick.

Slick 8.x-1.0-dev, 2016-06-13
-----------------------------
- Added lightbox caption option.
- Fixed for Blazy integration with hidden captions.

Slick 8.x-1.0-dev, 2016-06-10
-----------------------------
- Simplified SlickFormatter::buildSettings() a bit, and clarified descriptions.

Slick 8.x-1.0-dev, 2016-06-08
-----------------------------
- #2744741 by federico.bebber: Issues with responsive image styles.

Slick 8.x-1.0-dev, 2016-06-07
-----------------------------