@@ -88,17 +88,20 @@ The Slick module has several sub-modules:
 
 - slick_video [2], to get video carousels using Video Embed Field.
 
-- slick_views [3], to get more complex slides.
+- slick_paragraphs [3], to get more complex slides at field level.
+
+- slick_views [4], to get more complex slides.
 
 - slick_devel, if you want to help testing and developing the Slick.
 - slick_example, to get up and running quickly.
-  Both are included in slick_extras [4].
+  Both are included in slick_extras [5].
 
 
 [1] http://dgo.to/slick_media
 [2] http://dgo.to/slick_media
-[3] http://dgo.to/slick_views
-[4] http://dgo.to/slick_extras
+[3] http://dgo.to/slick_paragraphs
+[4] http://dgo.to/slick_views
+[5] http://dgo.to/slick_extras
 
 
 
@@ -145,8 +148,8 @@ Nested slick is a parent Slick containing slides which contain individual child
 slick per slide. The child slicks are basically regular slide overlays like
 a single video over the large background image, only with nested slicks it can
 be many videos displayed as a slideshow as well.
-Use Views to build one.
-Supported multi-value fields for nested slicks: Image, Text, Media entity.
+Use Slick Paragraphs or Views to build one.
+Supported multi-value fields for nested slicks: Image, Text, VEF, Media entity.
 
 
 SKINS
@@ -182,17 +185,19 @@ Optional skins:
 - Full screen
   Works best with 1 slidesToShow. Use z-index layering > 8 to position elements
   over the slides, and place it at large regions. Currently only works with
-  Slick fields, use Views to make it a block. Use block_reference inside FC to
+  Slick fields, use Views to make it a block. Use Slick Paragraphs to
   have more complex contents inside individual slide, and assign it to Slide
   caption fields.
 
 - Full width
   Adds additional wrapper to wrap overlay video and captions properly.
   This is designated for large slider in the header or spanning width to window
-  edges at least 1170px width for large monitor.
+  edges at least 1170px width for large monitor. To have a custom full width
+  skin, simply prefix your skin with "full", e.g.: fullstage, fullwindow, etc.
 
 - Split
-  Caption and image/media are split half, and placed side by side.
+  Caption and image/media are split half, and placed side by side. This requires
+  any layout containing "split", otherwise useless.
 
 - Grid
   Only reasonable if you have considerable amount of slides.
@@ -284,7 +289,7 @@ For the Slick library bug, please report it to the actual library:
 You can create a fiddle to isolate the bug if reproduceable outside the module:
   http://jsfiddle.net/
 
-For the support requests, a screenshot of the output and Slick form is helpful.
+For the support requests, a screenshot of the output and Slick form are helpful.
 Shortly, you should kindly help the maintainers with detailed info to help you.
 Thanks.
 
@@ -352,7 +357,7 @@ some code cleanup, and optimization where needed. Patches are very much welcome.
 Alpha and Beta releases are for developers only. Be aware of possible breakage.
 
 However if it is broken, unless an update is explicitly required, clearing cache
-should fix most issues durig DEV phases. Prior to any update, always visit:
+should fix most issues during DEV phases. Prior to any update, always visit:
 /admin/config/development/performance
 
 Be sure to first update Blazy.
